--- a/fluffyUnicorns/fluffyUnicorns/Web.config
+++ b/fluffyUnicorns/fluffyUnicorns/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-fluffyUnicorns-20140507182905;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-fluffyUnicorns-20140507182905.mdf" providerName="System.Data.SqlClient" />
+    <add name="fluffyUnicornsEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fluffyUnicorns.db.12042275.hostedresource.com;initial catalog=fluffyUnicorns;user id=fluffyUnicorns;password=Dinosaur1!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -19,7 +20,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
     </authentication>
