--- a/fluffyUnicorns/fluffyUnicorns/Web.config
+++ b/fluffyUnicorns/fluffyUnicorns/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -9,8 +9,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-fluffyUnicorns-20140507182905;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-fluffyUnicorns-20140507182905.mdf" providerName="System.Data.SqlClient" />
-    <add name="fluffyUnicornsEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fluffyUnicorns.db.12042275.hostedresource.com;initial catalog=fluffyUnicorns;user id=fluffyUnicorns;password=Dinosaur1!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-fluffyUnicorns-20140507182905;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-fluffyUnicorns-20140507182905.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="fluffyUnicornsEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fluffyUnicorns.db.12042275.hostedresource.com;initial catalog=fluffyUnicorns;user id=fluffyUnicorns;password=Dinosaur1!;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="fluffyUnicornsConnectionString" connectionString="Data Source=fluffyUnicorns.db.12042275.hostedresource.com;Initial Catalog=fluffyUnicorns;Persist Security Info=True;User ID=fluffyUnicorns;Password=Dinosaur1!"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
