--- a/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
+++ b/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
@@ -351,7 +351,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Home\BookMarks.cshtml" />
+    <Content Include="Views\bookmark\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
