--- a/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
+++ b/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
@@ -352,6 +352,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\bookmark\Index.cshtml" />
+    <Content Include="Views\bookmark\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
