--- a/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
+++ b/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
@@ -207,6 +207,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\bx_loader.gif" />
+    <Content Include="Content\images\controls.png" />
+    <Content Include="Content\jquery.bxslider.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -266,6 +269,11 @@
     <Content Include="Content\normalize.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Images\bx_loader.gif" />
+    <Content Include="Images\cat1.jpg" />
+    <Content Include="Images\cat2.jpg" />
+    <Content Include="Images\cat3.jpg" />
+    <Content Include="Images\controls.png" />
     <Content Include="Models\bookmarks.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>bookmarks.designer.cs</LastGenOutput>
@@ -299,6 +307,8 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
+    <Content Include="Scripts\jquery.bxslider.js" />
+    <Content Include="Scripts\jquery.bxslider.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
@@ -308,6 +318,8 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\plugins\jquery.easing.1.3.js" />
+    <Content Include="Scripts\plugins\jquery.fitvids.js" />
     <Content Include="Scripts\vendor\fastclick.js" />
     <Content Include="Scripts\vendor\jquery.cookie.js" />
     <Content Include="Scripts\vendor\jquery.js" />
