playing with reading files

--- a/fluffyUnicorns/fluffyUnicorns/Web.config
+++ b/fluffyUnicorns/fluffyUnicorns/Web.config
@@ -24,7 +24,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <httpRuntime requestValidationMode="2.0" requestPathInvalidCharacters=""/>
     <compilation debug="true" targetFramework="4.0">
+      
       <assemblies>
         <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
       </assemblies>
@@ -87,4 +89,5 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+
 </configuration>
