fixing stuff... create /

--- a/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
+++ b/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
@@ -267,7 +267,9 @@
     <Content Include="Content\foundation.min.css" />
     <Content Include="Content\normalize.css" />
     <Content Include="favicon.ico" />
+    <Content Include="files\blue.htm" />
     <Content Include="files\chromr.html" />
+    <Content Include="files\worms.txt" />
     <Content Include="Global.asax" />
     <Content Include="Images\bx_loader.gif" />
     <Content Include="Images\cat1.jpg" />
