Added stuff for standalone added links

--- a/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
+++ b/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
@@ -378,6 +378,8 @@
     <Content Include="Views\bookmark\Edit.cshtml" />
     <Content Include="Views\Home\Stats.cshtml" />
     <Content Include="Views\Home\Logout.cshtml" />
+    <Content Include="Views\bookmark\AddLink.cshtml" />
+    <Content Include="Views\bookmark\EditLink.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
