--- a/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
+++ b/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
@@ -287,6 +287,7 @@
     <None Include="Models\bookmarks.dbml.layout">
       <DependentUpon>bookmarks.dbml</DependentUpon>
     </None>
+    <None Include="Properties\PublishProfiles\CloudBookmarks.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Images\bg.jpg" />
     <Content Include="Scripts\foundation.min.js" />
