--- a/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
+++ b/fluffyUnicorns/fluffyUnicorns/fluffyUnicorns.csproj
@@ -252,6 +252,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\aspnet-fluffyUnicorns-20140507182905.mdf" />
+    <Content Include="App_Data\aspnet-fluffyUnicorns-20140507182905_log.ldf">
+      <DependentUpon>aspnet-fluffyUnicorns-20140507182905.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\images\bx_loader.gif" />
     <Content Include="Content\images\controls.png" />
     <Content Include="Content\jquery.bxslider.css" />
@@ -436,7 +440,6 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="bookmarkFiles\" />
   </ItemGroup>
   <PropertyGroup>
